--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Dongshin Kim, 2018-05-24 23:47
 cmake_minimum_required(VERSION 2.8)
 project( extrinsic_calibrator )
+set (CMAKE_CXX_STANDARD 11)
 add_subdirectory( src )
