--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,12 @@ build/src/CMakeFiles/testexcalib.dir/flags.make
 build/src/CMakeFiles/testexcalib.dir/link.txt
 build/src/CMakeFiles/testexcalib.dir/progress.make
 build/src/CMakeFiles/testexcalib.dir/test.cpp.o
+build/src/CMakeFiles/excalib.dir/NewKeyPoint.cpp.o
+build/CMakeFiles/Progress/1
+build/CMakeFiles/Progress/12
+build/CMakeFiles/Progress/13
+build/CMakeFiles/Progress/14
+build/CMakeFiles/Progress/2
+build/CMakeFiles/Progress/5
+build/CMakeFiles/Progress/count.txt
+build/src/CMakeFiles/excalib.dir/CvVisualizer.cpp.o
