--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ build/CMakeFiles/Progress/count.txt
 build/src/CMakeFiles/excalib.dir/CvVisualizer.cpp.o
 build/src/CMakeFiles/excalib.dir/worldpt.cpp.o
 build/src/CMakeFiles/excalib.dir/Preintegrator.cpp.o
+build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
