--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ build/src/CMakeFiles/excalib.dir/CvVisualizer.cpp.o
 build/src/CMakeFiles/excalib.dir/worldpt.cpp.o
 build/src/CMakeFiles/excalib.dir/Preintegrator.cpp.o
 build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
+.vscode/settings.json
+build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
+build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
