Temp. backup for changing os

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,70 @@ build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
 .vscode/settings.json
 build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
 build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
+in.txt
+config.xml
+out.txt
+.vscode/settings.json
+build/CMakeFiles/CMakeError.log
+build/CMakeFiles/Progress/15
+build/src/in.txt
+build/src/out.txt
+build/src/CMakeFiles/excalib.dir/ExtCalibrator.cpp.o
+build/src/CMakeFiles/excalib.dir/Frame.cpp.o
+build/src/CMakeFiles/excalib.dir/Parameters.cpp.o
+build/src/CMakeFiles/excalib.dir/PclVisualizerWrapper.cpp.o
+build/src/CMakeFiles/excalib.dir/ceres_BA.cpp.o
+build/src/CMakeFiles/excalib.dir/custom_ceres/ceres_BA.cpp.o
+build/src/CMakeFiles/excalib.dir/custom_gtsam/gtsam_slam.cpp.o
+doc/overalldiagramsvg.svg
+build/src/in.txt
+imuFactorExampleResults.csv
+.vscode/settings.json
+build/src/imuFactorExampleResults.csv
+build/src/libRelativeImuFactor.so
+build/src/out.txt
+build/src/testimu
+build/src/CMakeFiles/RelativeImuFactor.dir/CXX.includecache
+build/src/CMakeFiles/RelativeImuFactor.dir/DependInfo.cmake
+build/src/CMakeFiles/RelativeImuFactor.dir/build.make
+build/src/CMakeFiles/RelativeImuFactor.dir/cmake_clean.cmake
+build/src/CMakeFiles/RelativeImuFactor.dir/cmake_clean_target.cmake
+build/src/CMakeFiles/RelativeImuFactor.dir/depend.internal
+build/src/CMakeFiles/RelativeImuFactor.dir/depend.make
+build/src/CMakeFiles/RelativeImuFactor.dir/flags.make
+build/src/CMakeFiles/RelativeImuFactor.dir/link.txt
+build/src/CMakeFiles/RelativeImuFactor.dir/progress.make
+build/src/CMakeFiles/RelativeImuFactor.dir/Preintegration/RelativeImuFactor.cpp.o
+build/src/CMakeFiles/excalib.dir/ExtCalibrator.cpp.o
+build/src/CMakeFiles/excalib.dir/Frame.cpp.o
+build/src/CMakeFiles/excalib.dir/Parameters.cpp.o
+build/src/CMakeFiles/excalib.dir/Preintegration/RelativeImuFactor.cpp.o
+build/src/CMakeFiles/testexcalib.dir/RightJacobian.cpp.o
+build/src/CMakeFiles/testimu.dir/CXX.includecache
+build/src/CMakeFiles/testimu.dir/DependInfo.cmake
+build/src/CMakeFiles/testimu.dir/build.make
+build/src/CMakeFiles/testimu.dir/cmake_clean.cmake
+build/src/CMakeFiles/testimu.dir/depend.internal
+build/src/CMakeFiles/testimu.dir/depend.make
+build/src/CMakeFiles/testimu.dir/flags.make
+build/src/CMakeFiles/testimu.dir/link.txt
+build/src/CMakeFiles/testimu.dir/progress.make
+build/src/CMakeFiles/testimu.dir/Preintegration/ImuFactorsExample.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativeCombinedImuFactor.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativeImuFactor.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativeImuFactorsExample.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativeManifoldPreintegration.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativeNavState.cpp.o
+build/src/CMakeFiles/testimu.dir/Preintegration/RelativePreintegrationBase.cpp.o
+build/src/CMakeFiles/testimu2.dir/CXX.includecache
+build/src/CMakeFiles/testimu2.dir/DependInfo.cmake
+build/src/CMakeFiles/testimu2.dir/build.make
+build/src/CMakeFiles/testimu2.dir/cmake_clean.cmake
+build/src/CMakeFiles/testimu2.dir/depend.internal
+build/src/CMakeFiles/testimu2.dir/depend.make
+build/src/CMakeFiles/testimu2.dir/flags.make
+build/src/CMakeFiles/testimu2.dir/link.txt
+build/src/CMakeFiles/testimu2.dir/progress.make
+build/src/CMakeFiles/testimu2.dir/Preintegration/ImuFactorsExample.cpp.o
+build/src/CMakeFiles/testimu2.dir/Preintegration/RelativeManifoldPreintegration.cpp.o
+build/src/CMakeFiles/testimu2.dir/Preintegration/RelativePreintegrationBase.cpp.o
